[package]
name = "deadlock"
version = "0.5.0"
edition = "2018"
description = "Thread-safe slot map and slot min-heap with stable RAII handle"
authors = ["Hwanhee Kim <babtul21@gmail.com>"]
license = "MIT"
repository = "https://github.com/kimhappy/deadlock"
readme = "README.md"

[dependencies]
crossbeam-channel = "0.5"
parking_lot = "0.12"
triomphe = "0.1"
