[package]
name = "deadlock"
version = "0.7.0"
edition = "2018"
description = "Thread-safe slot map and slot min-heap with stable RAII handle"
authors = ["Hwanhee Kim <babtul21@gmail.com>"]
license = "MIT"
repository = "https://github.com/kimhappy/deadlock"
readme = "README.md"

[dependencies]
parking_lot = "0.12"
triomphe = "0.1"
